# superconducted-noise-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: calibration-poll.yml  ci.yml
docs/: architecture.md  decisions.md  team.md
docs/findings/: aer-integration-walkthrough.md  harness-validation.md
docs/implementations/: 2026-05-07-repo-bootstrap.md  2026-05-13-calibration-poller-cron.md  2026-05-13-harness-metric-sanity-checks.md  2026-05-14-aer-ensemble-walkthrough.md  2026-05-16-aer-ensemble-walkthrough.md  2026-05-16-loader-missing-fields.md  _TEMPLATE.md
notebooks/: README.md
scripts/: first_ensemble_run.py
snapshots/2026-05/ibm_fez/: 20260513T121322000000Z.json  20260513T143529000000Z.json  20260513T152118000000Z.json  20260513T184440000000Z.json  20260513T202707000000Z.json  20260513T215706000000Z.json  20260513T235420000000Z.json  20260514T042803000000Z.json  20260514T070546000000Z.json  20260514T094643000000Z.json  20260514T123242000000Z.json  20260514T150000000000Z.json  20260514T165538000000Z.json  20260514T191202000000Z.json  20260514T195201000000Z.json  20260514T223551000000Z.json  20260514T234626000000Z.json  20260515T034827000000Z.json  20260515T093453000000Z.json  20260515T113710000000Z.json  20260515T183744000000Z.json  20260515T205538000000Z.json  20260515T222515000000Z.json  20260515T233546000000Z.json  20260516T025420000000Z.json  20260516T054344000000Z.json  20260516T075732000000Z.json  20260516T093915000000Z.json  20260516T111002000000Z.json  20260516T130539000000Z.json  20260516T142521000000Z.json  20260516T155022000000Z.json  20260516T163304000000Z.json  20260516T182525000000Z.json  20260516T194530000000Z.json  20260516T210531000000Z.json  20260516T222522000000Z.json  20260516T234529000000Z.json  20260517T030217000000Z.json  20260517T062608000000Z.json  (+19 more)
src/superconducted/: __init__.py  interfaces.py  types.py
src/superconducted/benchmarks/: __init__.py  circuits.py  harness.py  metrics.py
tests/: conftest.py  test_calibration.py  test_first_ensemble_run.py  test_harness_validation.py  test_interfaces.py  test_membership.py  test_metrics.py  test_tsk.py
tests/calibration/: test_features_missing_fields.py  test_loader.py
(+17 files in other folders)
