[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "superconducted"
version = "0.1.0"
description = "Fuzzy-logic noise engine for Qiskit Aer-based quantum emulators."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "SuperconducTED contributors" }]
keywords = [
    "qiskit",
    "fuzzy logic",
    "TSK",
    "ANFIS",
    "noise model",
    "quantum simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=2.4,<3",
    "qiskit-aer>=0.17,<0.18",
    "qiskit-ibm-runtime>=0.46,<0.50",
    "numpy>=2.4.1,<3",
    "scipy>=1.17,<2",
    "python-dotenv>=1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "mypy>=1.20,<2",
    "ruff>=0.15,<0.20",
    "ipykernel>=7,<8",
]

[project.scripts]
superconducted-poll = "superconducted.calibration.poller:main"

[tool.hatch.build.targets.wheel]
packages = ["src/superconducted"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# PL is intentionally OFF for the bootstrap (too noisy on small ABCs / factories).
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RET", "RUF"]
ignore = [
    # Allow `dict()` constructor in tests/configs where it reads better.
    "C408",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/superconducted"]
warn_unused_ignores = false
# Quiet down on third-party stubs we don't ship.
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "qiskit",
    "qiskit.*",
    "qiskit_aer",
    "qiskit_aer.*",
    "qiskit_ibm_runtime",
    "qiskit_ibm_runtime.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
